fix: Delete the useEffect that manipulate the html style overflow in Menu and ProductFilterPrice component

--- a/src/styles/components/Products/Product.module.css
+++ b/src/styles/components/Products/Product.module.css
@@ -13,7 +13,6 @@
   display: grid;
   gap: 14px;
   grid-template-columns: repeat(auto-fill, minmax(min(150px, 100%), 1fr));
-  width: min(700px, 88%);
   margin-inline: auto;
 }
 
