--- a/src/styles/components/home/TrendingProducts.module.css
+++ b/src/styles/components/home/TrendingProducts.module.css
@@ -2,8 +2,8 @@
   padding: 3rem 0;
   margin: 0 auto;
   overflow: hidden;
-  width: 100vw;
-  max-width: 700px;
+  /* width: 100vw;
+  max-width: 700px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -19,6 +19,7 @@
 }
 
 .title-top-rated {
+  display: block;
   text-transform: uppercase;
   font-weight: normal;
   margin-bottom: 4px;
@@ -107,6 +108,10 @@
   background-color: hsl(var(--default));
   transform: translate(-50%, -50%) rotate(45deg);
 } */
+
+.product-container {
+  width: 100%;
+}
 
 .more-product-button {
   align-self: center;
